Include python note book at .py

--- a/python/Route Stats.ipynb
+++ b/python/Route Stats.ipynb
@@ -18,31 +18,133 @@
       "sys.path.append(\"..\")    \n",
       "\n",
       "# New data frame\n",
-      "data = pandas.read_csv('data/sf/sf-passenger-count.csv', header=0)"
+      "data = pandas.read_csv('data/sf/sf-passenger-count.csv', header=0)\n",
+      "data.tail()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>TRIP_ID</th>\n",
+        "      <th>ROUTE</th>\n",
+        "      <th>DIR</th>\n",
+        "      <th>STOP_ID</th>\n",
+        "      <th>STOP_SEQ</th>\n",
+        "      <th>TIMESTOP</th>\n",
+        "      <th>ON</th>\n",
+        "      <th>OFF</th>\n",
+        "      <th>LOAD</th>\n",
+        "      <th>DATE</th>\n",
+        "      <th>LATITUDE</th>\n",
+        "      <th>LONGITUDE</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>513780</th>\n",
+        "      <td> 2306</td>\n",
+        "      <td> 17</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 7205</td>\n",
+        "      <td> 27</td>\n",
+        "      <td> 23:22:04</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 4</td>\n",
+        "      <td> 10/7/12</td>\n",
+        "      <td> 37.73461</td>\n",
+        "      <td> 122.47147</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>513781</th>\n",
+        "      <td> 2306</td>\n",
+        "      <td> 17</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 6899</td>\n",
+        "      <td> 28</td>\n",
+        "      <td> 23:22:34</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 4</td>\n",
+        "      <td> 10/7/12</td>\n",
+        "      <td> 37.73648</td>\n",
+        "      <td> 122.47062</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>513782</th>\n",
+        "      <td> 2306</td>\n",
+        "      <td> 17</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 6896</td>\n",
+        "      <td> 29</td>\n",
+        "      <td> 23:23:21</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 4</td>\n",
+        "      <td> 10/7/12</td>\n",
+        "      <td> 37.73815</td>\n",
+        "      <td> 122.46882</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>513783</th>\n",
+        "      <td> 2306</td>\n",
+        "      <td> 17</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 6905</td>\n",
+        "      <td> 30</td>\n",
+        "      <td> 23:24:30</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 4</td>\n",
+        "      <td> 10/7/12</td>\n",
+        "      <td> 37.73965</td>\n",
+        "      <td> 122.46703</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>513784</th>\n",
+        "      <td> 2306</td>\n",
+        "      <td> 17</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 6739</td>\n",
+        "      <td> 31</td>\n",
+        "      <td> 23:24:51</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 2</td>\n",
+        "      <td> 2</td>\n",
+        "      <td> 10/7/12</td>\n",
+        "      <td> 37.74071</td>\n",
+        "      <td> 122.46584</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "</div>"
+       ],
        "output_type": "pyout",
-       "prompt_number": 164,
+       "prompt_number": 1,
        "text": [
-        "ROUTE\n",
-        "1         731\n",
-        "2        1922\n",
-        "3           1\n",
-        "5        4160\n",
-        "6        3028\n",
-        "9        4260\n",
-        "10       1393\n",
-        "12        933\n",
-        "14       6077\n",
-        "18       1153\n",
-        "Name: ON, dtype: float64"
+        "        TRIP_ID  ROUTE  DIR  STOP_ID  STOP_SEQ  TIMESTOP  ON  OFF  LOAD     DATE  \\\n",
+        "513780     2306     17    1     7205        27  23:22:04   0    0     4  10/7/12   \n",
+        "513781     2306     17    1     6899        28  23:22:34   0    0     4  10/7/12   \n",
+        "513782     2306     17    1     6896        29  23:23:21   0    0     4  10/7/12   \n",
+        "513783     2306     17    1     6905        30  23:24:30   0    0     4  10/7/12   \n",
+        "513784     2306     17    1     6739        31  23:24:51   0    2     2  10/7/12   \n",
+        "\n",
+        "        LATITUDE  LONGITUDE  \n",
+        "513780  37.73461  122.47147  \n",
+        "513781  37.73648  122.47062  \n",
+        "513782  37.73815  122.46882  \n",
+        "513783  37.73965  122.46703  \n",
+        "513784  37.74071  122.46584  "
        ]
       }
      ],
-     "prompt_number": 164
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
